添加大量注释，优化一些代码